@@ -1,5 +1,12 @@
 Sun Jul 26 13:06:12 1998  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>
 
+	* exit.c (_pthread_exit): New function. Called from pthread_exit()
+	and _pthread_start_call() to exit the thread. It allows an extra
+	argument which is the return code passed to _endthreadex().
+
+	* create.c (_pthread_start_call): Change pthread_exit() call to
+	_pthread_exit() call.
+
 	* exit.c (_pthread_vacuum): Add thread entry deletion code
 	moved from _pthread_start_call(). See next item.
 	(pthread_exit): Remove longjmp(). Add mutex lock around thread table
